ensure subtitle stays centered when wrapped (i.e. on mobile)

--- a/res/styles.css
+++ b/res/styles.css
@@ -32,6 +32,7 @@ body {
     font-size: 2.34vh;
     margin-block-start: 2vh;
     margin-block-end: 2vh;
+    text-align: center;
 }
 .intro-links {
     display: flex;
